--- a/index.html
+++ b/index.html
@@ -232,19 +232,19 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="downloads"> Downloads </h3>
 <table class='badge'><tbody>
-  <tr><th data-keywords='github'> Github All Releases: </th>
+  <tr><th data-keywords='github' data-doc='githubDoc'> Github All Releases: </th>
   <td><img src='https://img.shields.io/github/downloads/atom/atom/total.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/total.svg</code></td>
   </tr>
-  <tr><th data-keywords='github'> Github Releases: </th>
+  <tr><th data-keywords='github' data-doc='githubDoc'> Github Releases: </th>
   <td><img src='https://img.shields.io/github/downloads/atom/atom/latest/total.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/total.svg</code></td>
   </tr>
-  <tr><th data-keywords='github'> Github Releases (by Release): </th>
+  <tr><th data-keywords='github' data-doc='githubDoc'> Github Releases (by Release): </th>
   <td><img src='https://img.shields.io/github/downloads/atom/atom/v0.190.0/total.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/v0.190.0/total.svg</code></td>
   </tr>
-  <tr><th data-keywords='github'> Github Releases (by Asset): </th>
+  <tr><th data-keywords='github' data-doc='githubDoc'> Github Releases (by Asset): </th>
   <td><img src='https://img.shields.io/github/downloads/atom/atom/latest/atom-amd64.deb.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/downloads/atom/atom/latest/atom-amd64.deb.svg</code></td>
   </tr>
@@ -467,15 +467,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/hexpm/v/plug.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/hexpm/v/plug.svg</code></td>
   </tr>
-  <tr><th> GitHub tag: </th>
+  <tr><th data-doc='githubDoc'> GitHub tag: </th>
   <td><img src='https://img.shields.io/github/tag/strongloop/express.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/tag/strongloop/express.svg</code></td>
   </tr>
-  <tr><th> GitHub release: </th>
+  <tr><th data-doc='githubDoc'> GitHub release: </th>
   <td><img src='https://img.shields.io/github/release/qubyte/rubidium.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
   </tr>
-  <tr><th> GitHub commits: </th>
+  <tr><th data-doc='githubDoc'> GitHub commits: </th>
   <td><img src='https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/commits-since/SubtitleEdit/subtitleedit/3.4.7.svg</code></td>
   </tr>
@@ -555,19 +555,19 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 
 <h3 id="social"> Social </h3>
 <table class='badge'><tbody>
-  <tr><th> GitHub forks: </th>
+  <tr><th data-doc='githubDoc'> GitHub forks: </th>
   <td><img src='https://img.shields.io/github/forks/badges/shields.svg?style=social&label=Fork&maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/forks/badges/shields.svg?style=social&amp;label=Fork</code></td>
   </tr>
-  <tr><th> GitHub stars: </th>
+  <tr><th data-doc='githubDoc'> GitHub stars: </th>
   <td><img src='https://img.shields.io/github/stars/badges/shields.svg?style=social&label=Star&maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/stars/badges/shields.svg?style=social&amp;label=Star</code></td>
   </tr>
-  <tr><th> GitHub watchers: </th>
+  <tr><th data-doc='githubDoc'> GitHub watchers: </th>
   <td><img src='https://img.shields.io/github/watchers/badges/shields.svg?style=social&label=Watch&maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/watchers/badges/shields.svg?style=social&amp;label=Watch</code></td>
   </tr>
-  <tr><th> GitHub followers: </th>
+  <tr><th data-doc='githubDoc'> GitHub followers: </th>
   <td><img src='https://img.shields.io/github/followers/espadrine.svg?style=social&label=Follow&maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/followers/espadrine.svg?style=social&amp;label=Follow</code></td>
   </tr>
@@ -695,19 +695,19 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/wheelmap/a/2323004600.svg?maxAge=2592000' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
   </tr>
-  <tr><th> GitHub issues: </th>
+  <tr><th data-doc='githubDoc'> GitHub issues: </th>
     <td><img src='https://img.shields.io/github/issues/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub'></th>
+  <tr><th data-keywords='GitHub' data-doc='githubDoc'></th>
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub'> label:</th>
+  <tr><th data-keywords='GitHub' data-doc='githubDoc'> label:</th>
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields/website.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub license'> license: </th>
+  <tr><th data-keywords='GitHub license' data-doc='githubDoc'> license: </th>
     <td><img src='https://img.shields.io/github/license/mashape/apistatus.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
   </tr>
@@ -1085,6 +1085,14 @@ is where the current server got started.
             </td><td>  <code>&nbsp;</code> Space
           </td></tr>
       </tbody></table>
+    </p>
+  </div>
+  <div id="githubDoc">
+    <p>If your GitHub badge errors, it might be because you hit GitHub's rate
+    limits.<br>
+    You can increase Shield.io's rate limit by
+    <a href="https://img.shields.io/github-auth">going to this page</a>
+    to add Shields as a GitHub application on your GitHub account.
     </p>
   </div>
 </div>
