website: use HTTPS for GitHub button

--- a/try.html
+++ b/try.html
@@ -991,7 +991,7 @@ And tell us, we might be able to bring it to you anyway!
 <p>
 <a href='https://twitter.com/Shields_io'><img src='/twitter/follow/shields_io.svg?style=social&label=Follow' alt='Follow @shields_io'></a>
 <a href='https://www.gratipay.com/Shields/'><img src='/gratipay/Shields.svg?style=social&label=Donate' alt='Donate to us!'/></a>
-<iframe src="http://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
+<iframe src="https://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
   width="95" height="20"></iframe>
 </p>
