--- a/try.html
+++ b/try.html
@@ -706,6 +706,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-raw/badges/shields/website.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'> GitHub pull requests: </th>
+    <td><img src='/github/issues-pr/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-pr/cdnjs/cdnjs.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'></th>
+    <td><img src='/github/issues-pr-raw/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub license' data-doc='githubDoc'> license: </th>
     <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
