--- a/try.html
+++ b/try.html
@@ -714,6 +714,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-pr-raw/cdnjs/cdnjs.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub contributor' data-doc='githubDoc'> GitHub contributors: </th>
+    <td><img src='/github/contributors/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/contributors/cdnjs/cdnjs.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub license' data-doc='githubDoc'> license: </th>
     <td><img src='/github/license/mashape/apistatus.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/license/mashape/apistatus.svg</code></td>
