--- a/index.html
+++ b/index.html
@@ -703,6 +703,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub' data-doc='githubDoc'> GitHub closed issues: </th>
+    <td><img src='https://img.shields.io/github/issues-closed/badges/shields.svg?maxAge=2592001' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-closed/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub' data-doc='githubDoc'></th>
+    <td><img src='https://img.shields.io/github/issues-closed-raw/badges/shields.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-closed-raw/badges/shields.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub' data-doc='githubDoc'> label:</th>
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields/website.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
@@ -714,6 +722,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'></th>
     <td><img src='https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'> GitHub closed pull requests: </th>
+    <td><img src='https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'></th>
+    <td><img src='https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub contributor' data-doc='githubDoc'> GitHub contributors: </th>
     <td><img src='https://img.shields.io/github/contributors/cdnjs/cdnjs.svg' alt=''/></td>
