update keywords of GitHub issues integration

--- a/index.html
+++ b/index.html
@@ -695,23 +695,23 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/wheelmap/a/2323004600.svg?maxAge=2592000' alt='' /></td>
     <td><code>https://img.shields.io/wheelmap/a/2323004600.svg</code></td>
   </tr>
-  <tr><th data-doc='githubDoc'> GitHub issues: </th>
+  <tr><th data-keywords='GitHub issue' data-doc='githubDoc'> GitHub issues: </th>
     <td><img src='https://img.shields.io/github/issues/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub' data-doc='githubDoc'></th>
+  <tr><th data-keywords='GitHub issue' data-doc='githubDoc'></th>
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub' data-doc='githubDoc'> GitHub closed issues: </th>
+  <tr><th data-keywords='GitHub issue' data-doc='githubDoc'> GitHub closed issues: </th>
     <td><img src='https://img.shields.io/github/issues-closed/badges/shields.svg?maxAge=2592001' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-closed/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub' data-doc='githubDoc'></th>
+  <tr><th data-keywords='GitHub issue' data-doc='githubDoc'></th>
     <td><img src='https://img.shields.io/github/issues-closed-raw/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-closed-raw/badges/shields.svg</code></td>
   </tr>
-  <tr><th data-keywords='GitHub' data-doc='githubDoc'> label:</th>
+  <tr><th data-keywords='GitHub issue label' data-doc='githubDoc'> label:</th>
     <td><img src='https://img.shields.io/github/issues-raw/badges/shields/website.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
