--- a/index.html
+++ b/index.html
@@ -471,6 +471,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/github/tag/strongloop/express.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/tag/strongloop/express.svg</code></td>
   </tr>
+  <tr><th data-doc='githubDoc'> GitHub package version: </th>
+  <td><img src='https://img.shields.io/github/package/badges/shields.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/github/tag/badges/shields.svg</code></td>
+  </tr>
+  <tr><th data-doc='githubDoc'> GitHub manifest version: </th>
+  <td><img src='https://img.shields.io/github/manifest/RedSparr0w/IndieGala-Helper.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/github/tag/RedSparr0w/IndieGala-Helper.svg</code></td>
+  </tr>
   <tr><th data-doc='githubDoc'> GitHub release: </th>
   <td><img src='https://img.shields.io/github/release/qubyte/rubidium.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
