Issue Stats: default to short form
Use the long form with prefix 'long'.
An example of that is added.

Part of #656.

--- a/try.html
+++ b/try.html
@@ -917,9 +917,17 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/issuestats/i/github/strongloop/express.svg' alt=''/></td>
   <td><code>https://img.shields.io/issuestats/i/github/strongloop/express.svg</code></td>
   </tr>
+  <tr><th> (long form): </th>
+  <td>&nbsp;</td>
+  <td><code>https://img.shields.io/issuestats/i/long/github/strongloop/express.svg</code></td>
+  </tr>
   <tr><th> Issue Stats: </th>
   <td><img src='/issuestats/p/github/strongloop/express.svg' alt=''/></td>
   <td><code>https://img.shields.io/issuestats/p/github/strongloop/express.svg</code></td>
+  <tr><th> (long form): </th>
+  <td>&nbsp;</td>
+  <td><code>https://img.shields.io/issuestats/p/long/github/strongloop/express.svg</code></td>
+  </tr>
   </tr>
 </tbody></table>
 
