--- a/index.html
+++ b/index.html
@@ -771,6 +771,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/wordpress/plugin/r/akismet.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
   </tr>
+  <tr><th> WordPress active: </th>
+    <td><img src='https://img.shields.io/wordpress/plugin/ai/akismet.svg' alt=''/></td>
+  <td><code>https://img.shields.io/wordpress/plugin/ai/akismet.svg</code></td>
+  </tr>
   <tr><th> Codacy grade: </th>
     <td><img src='https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/codacy/grade/e27821fb6289410b8f58338c7e0bc686.svg</code></td>
