website: shippable, issue stats, GitHub button HTTPS, maxAge in dialog

--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
       <td><code>https://img.shields.io/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg</code></td>
   </tr>
   <tr><th> Shippable: </th>
-      <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg?maxAge=2592000' alt=''/></td>
-      <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183.svg</code></td>
+      <td><img src='https://img.shields.io/shippable/5444c5ecb904a4b21567b0ff.svg?maxAge=2592000' alt=''/></td>
+      <td><code>https://img.shields.io/shippable/5444c5ecb904a4b21567b0ff.svg</code></td>
   </tr>
   <tr><th> Shippable branch: </th>
-      <td><img src='https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg?maxAge=2592000' alt=''/></td>
-      <td><code>https://img.shields.io/shippable/54d119db5ab6cc13528ab183/master.svg</code></td>
+      <td><img src='https://img.shields.io/shippable/5444c5ecb904a4b21567b0ff/master.svg?maxAge=2592000' alt=''/></td>
+      <td><code>https://img.shields.io/shippable/5444c5ecb904a4b21567b0ff/master.svg</code></td>
   </tr>
   <tr><th> Snap CI branch: </th>
       <td><img src='https://img.shields.io/snap-ci/ThoughtWorksStudios/eb_deployer/master.svg?maxAge=2592000' alt=''/></td>
@@ -704,7 +704,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/github/issues-raw/badges/shields.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub issue' data-doc='githubDoc'> GitHub closed issues: </th>
-    <td><img src='https://img.shields.io/github/issues-closed/badges/shields.svg?maxAge=2592001' alt=''/></td>
+    <td><img src='https://img.shields.io/github/issues-closed/badges/shields.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-closed/badges/shields.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub issue' data-doc='githubDoc'></th>
@@ -716,23 +716,23 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/github/issues-raw/badges/shields/website.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'> GitHub pull requests: </th>
-    <td><img src='https://img.shields.io/github/issues-pr/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/github/issues-pr/cdnjs/cdnjs.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'></th>
-    <td><img src='https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-raw/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'> GitHub closed pull requests: </th>
-    <td><img src='https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-closed/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub pullrequest pr' data-doc='githubDoc'></th>
-    <td><img src='https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub contributor' data-doc='githubDoc'> GitHub contributors: </th>
-    <td><img src='https://img.shields.io/github/contributors/cdnjs/cdnjs.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/github/contributors/cdnjs/cdnjs.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/github/contributors/cdnjs/cdnjs.svg</code></td>
   </tr>
   <tr><th data-keywords='GitHub license' data-doc='githubDoc'> license: </th>
@@ -816,7 +816,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/docker/pulls/mashape/kong.svg</code></td>
   </tr>
   <tr><th data-keywords='docker automated build'> Docker Automated build </th>
-    <td><img src='https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg' alt=''/></td>
+    <td><img src='https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/docker/automated/jrottenberg/ffmpeg.svg</code></td>
   </tr>
   <tr><th data-keywords='imagelayers'> ImageLayers Size: </th>
@@ -917,6 +917,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th> StackExchange: </th>
   <td><img src='https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/stackexchange/stackoverflow/t/augeas.svg</code></td>
+  </tr>
+  <tr><th> Issue Stats: </th>
+  <td><img src='https://img.shields.io/issuestats/i/github/strongloop/express.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/issuestats/i/github/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> (long form): </th>
+  <td>&nbsp;</td>
+  <td><code>https://img.shields.io/issuestats/i/long/github/strongloop/express.svg</code></td>
+  </tr>
+  <tr><th> Issue Stats: </th>
+  <td><img src='https://img.shields.io/issuestats/p/github/strongloop/express.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/issuestats/p/github/strongloop/express.svg</code></td>
+  <tr><th> (long form): </th>
+  <td>&nbsp;</td>
+  <td><code>https://img.shields.io/issuestats/p/long/github/strongloop/express.svg</code></td>
+  </tr>
   </tr>
 </tbody></table>
 
@@ -1024,7 +1040,7 @@ And tell us, we might be able to bring it to you anyway!
 <p>
 <a href='https://twitter.com/Shields_io'><img src='https://img.shields.io/twitter/follow/shields_io.svg?style=social&label=Follow&maxAge=2592000' alt='Follow @shields_io'></a>
 <a href='https://www.gratipay.com/Shields/'><img src='https://img.shields.io/gratipay/Shields.svg?style=social&label=Donate&maxAge=2592000' alt='Donate to us!'/></a>
-<iframe src="http://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
+<iframe src="https://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
   width="95" height="20"></iframe>
 </p>
@@ -1270,7 +1286,7 @@ function markupDialog(tr) {
   var th = tr.firstElementChild;
   var link = th.dataset.link? th.dataset.link: '';
   // Remove the ?maxAge parameter from the query string.
-  link.replace(/[\?&]maxAge=\d+$|maxAge=\d+&/, '');
+  trimg.replace(/[\?&]maxAge=\d+$|maxAge=\d+&/, '');
   copyForm.img.value = trimg;
   copyForm.url.value = link;
   // Insert documentation.
