--- a/try.html
+++ b/try.html
@@ -830,9 +830,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/gitter/room/nwjs/nw.js.svg' alt=''/></td>
     <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
-  <tr><th> JIRA issue: </th>
-    <td><img src='/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg' alt=''/></td>
+  <tr><th data-keywords='jira-issues'> JIRA issue: </th>
+    <td><img src='/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
+  </tr>
+  <tr><th data-keywords='jira-sprint-completion'> JIRA sprint completion: </th>
+    <td><img src='/jira/sprint/https/issues.apache.org/jira/247.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/jira/sprint/https/issues.apache.org/jira/247.svg</code></td>
   </tr>
   <tr><th> Maintenance: </th>
     <td><img src='/maintenance/yes/2016.svg' alt=''/></td>
