Fix badge preview on style change
This was broken by 89affa49fec5

--- a/try.html
+++ b/try.html
@@ -1311,8 +1311,10 @@ function markupDialog(tr) {
     var url = copyForm.url.value;
     var img = copyForm.img.value;
     var style = copyForm.style.value;
-    // Default style doesn't show.
-    if (style !== 'flat') { img += '?style=' + style; }
+    // Default style doesn't need value
+    if (style !== 'flat') {
+      img += (img.indexOf('?') != -1 ? '&style=' : '?style=') + style;
+    }
     var md = '[![' + trname + '](' + img + ')](' + url + ')';
     var rst = '.. image:: ' + img + '   :target: ' + url;
     copyMarkdown.value = md;
