--- a/try.html
+++ b/try.html
@@ -746,6 +746,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/bitbucket/issues-raw/atlassian/python-bitbucket.svg' alt=''/></td>
     <td><code>https://img.shields.io/bitbucket/issues-raw/atlassian/python-bitbucket.svg</code></td>
   </tr>
+  <tr><th> Bitbucket open pull requests: </th>
+    <td><img src='/bitbucket/pr/osrf/gazebo.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/pr/osrf/gazebo.svg</code></td>
+  </tr>
+  <tr><th data-keywords='Bitbucket'></th>
+    <td><img src='/bitbucket/pr-raw/osrf/gazebo.svg' alt=''/></td>
+    <td><code>https://img.shields.io/bitbucket/pr-raw/osrf/gazebo.svg</code></td>
+  </tr>
   <tr><th> WordPress rating: </th>
     <td><img src='/wordpress/plugin/r/akismet.svg' alt=''/></td>
     <td><code>https://img.shields.io/wordpress/plugin/r/akismet.svg</code></td>
