--- a/index.html
+++ b/index.html
@@ -118,16 +118,16 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff/new-meta.svg</code></td>
   </tr>
   <tr><th> CircleCI: </th>
-      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg?maxAge=2592000' alt=''/></td>
-      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt.svg</code></td>
+      <td><img src='https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser.svg?maxAge=2592000' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser.svg</code></td>
   </tr>
   <tr><th> CircleCI branch: </th>
-      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg?maxAge=2592000' alt=''/></td>
-      <td><code>https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg</code></td>
+      <td><img src='https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg?maxAge=2592000' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
   </tr>
   <tr><th> CircleCI token: </th>
-      <td><img src='https://img.shields.io/circleci/project/BrightFlair/PHP.Gt/master.svg?maxAge=2592000' alt=''/></td>
-      <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/BrightFlair/PHP.Gt/master.svg</code></td>
+      <td><img src='https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg?maxAge=2592000' alt=''/></td>
+      <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
   </tr>
   <tr><th data-doc='visualStudioTeamServices'> Visual Studio Team services: </th>
       <td><img src='https://img.shields.io/vso/build/larsbrinkhoff/953a34b9-5966-4923-a48a-c41874cfb5f5/1.svg?maxAge=2592000' alt=''/></td>
