Use ampersand on url style generator, assuming the maxAge parameter is always populated.

--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,7 @@ function markupDialog(tr) {
     var img = copyForm.img.value;
     var style = copyForm.style.value;
     // Default style doesn't show.
-    if (style !== 'flat') { img += '?style=' + style; }
+    if (style !== 'flat') { img += '&style=' + style; }
     var md = '[![' + trname + '](' + img + ')](' + url + ')';
     var rst = '.. image:: ' + img + '   :target: ' + url;
     copyMarkdown.value = md;
