--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
+  <tr><th data-keywords='cdn cdnjs'> CDNJS: </th>
+  <td><img src='https://img.shields.io/cdnjs/v/jquery.svg?maxAge=2592000' alt=''/></td>
+  <td><code>https://img.shields.io/cdnjs/v/jquery.svg</code></td>
+  </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='https://img.shields.io/npm/v/npm.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/npm.svg</code></td>
