--- a/try.html
+++ b/try.html
@@ -406,6 +406,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
+  <tr><th data-keywords='cdn cdnjs'> CDNJS: </th>
+  <td><img src='/cdnjs/v/jquery.svg' alt=''/></td>
+  <td><code>https://img.shields.io/cdnjs/v/jquery.svg</code></td>
+  </tr>
   <tr><th data-keywords='node'> npm: </th>
   <td><img src='/npm/v/npm.svg' alt=''/></td>
   <td><code>https://img.shields.io/npm/v/npm.svg</code></td>
