Add 2 new badges for Github pull request state and review

--- a/try.html
+++ b/try.html
@@ -790,6 +790,14 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/github/issues-pr-closed-raw/cdnjs/cdnjs.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/issues-pr-closed-raw/cdnjs/cdnjs.svg</code></td>
   </tr>
+  <tr><th data-keywords='GitHub pullrequest pr state merge mergeability' data-doc='githubDoc'> GitHub pull request state: </th>
+    <td><img src='/github/pr-state/badges/shields/578.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/pr-state/badges/shields/578.svg</code></td>
+  </tr>
+  <tr><th data-keywords='GitHub pullrequest pr state review' data-doc='githubDoc'> GitHub pull request review: </th>
+    <td><img src='/github/pr-review/badges/shields/578.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/pr-review/badges/shields/578.svg</code></td>
+  </tr>
   <tr><th data-keywords='GitHub contributor' data-doc='githubDoc'> GitHub contributors: </th>
     <td><img src='/github/contributors/cdnjs/cdnjs.svg' alt=''/></td>
     <td><code>https://img.shields.io/github/contributors/cdnjs/cdnjs.svg</code></td>
