Use maintainer's twitter account

--- a/try.html
+++ b/try.html
@@ -575,8 +575,8 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><code>https://img.shields.io/twitter/url/http/shields.io.svg?style=social</code></td>
   </tr>
   <tr><th> Twitter Follow: </th>
-  <td><img src='/twitter/follow/shields_io.svg?style=social&label=Follow' alt=''/></td>
-  <td><code>https://img.shields.io/twitter/follow/shields_io.svg?style=social&amp;label=Follow</code></td>
+  <td><img src='/twitter/follow/espadrine.svg?style=social&label=Follow' alt=''/></td>
+  <td><code>https://img.shields.io/twitter/follow/espadrine.svg?style=social&amp;label=Follow</code></td>
   </tr>
 </tbody></table>
 
@@ -1044,7 +1044,7 @@ Tell your favorite badge service to use it! <br/>
 And tell us, we might be able to bring it to you anyway!
 </p>
 <p>
-<a href='https://twitter.com/Shields_io'><img src='/twitter/follow/shields_io.svg?style=social&label=Follow' alt='Follow @shields_io'></a>
+<a href='https://twitter.com/espadrine'><img src='/twitter/follow/espadrine.svg?style=social&label=Follow' alt='Follow @espadrine'></a>
 <a href='https://www.gratipay.com/Shields/'><img src='/gratipay/Shields.svg?style=social&label=Donate' alt='Donate to us!'/></a>
 <iframe src="https://ghbtns.com/github-btn.html?user=badges&amp;repo=shields&amp;type=fork&amp;count=true"
   style="border:0; background-color:transparent"
