Added changes requested by reviewer for #770

--- a/index.html
+++ b/index.html
@@ -831,13 +831,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/gitter/room/nwjs/nw.js.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/gitter/room/nwjs/nw.js.svg</code></td>
   </tr>
-  <tr><th data-keywords='jira-issues'> JIRA issue: </th>
-    <td><img src='/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg?maxAge=2592000' alt=''/></td>
+  <tr><th> JIRA issue: </th>
+    <td><img src='https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
   </tr>
-  <tr><th data-keywords='jira-sprint-completion'> JIRA sprint completion: </th>
-    <td><img src='/jira/sprint/https/issues.apache.org/jira/247.svg?maxAge=2592000' alt=''/></td>
-    <td><code>https://img.shields.io/jira/sprint/https/issues.apache.org/jira/247.svg</code></td>
+  <tr><th data-doc='jira-sprint-completion'> JIRA sprint completion: </th>
+    <td><img src='https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg</code></td>
   </tr>
   <tr><th> Maintenance: </th>
     <td><img src='https://img.shields.io/maintenance/yes/2016.svg?maxAge=2592000' alt=''/></td>
@@ -937,6 +937,13 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td>&nbsp;</td>
   <td><code>https://img.shields.io/issuestats/p/long/github/strongloop/express.svg</code></td>
   </tr>
+  <tr><th> Libraries.io for releases: </th>
+    <td><img src='https://img.shields.io/librariesio/release/hex/phoenix/1.0.3.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/librariesio/release/hex/phoenix/1.0.3.svg</code></td>
+  </tr>
+  <tr><th> Libraries.io for GitHub: </th>
+    <td><img src='https://img.shields.io/librariesio/github/phoenixframework/phoenix.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/librariesio/github/phoenixframework/phoenix.svg</code></td>
   </tr>
 </tbody></table>
 
@@ -1146,6 +1153,9 @@ is where the current server got started.
     <a href="https://img.shields.io/github-auth">going to this page</a>
     to add Shields as a GitHub application on your GitHub account.
     </p>
+  </div>
+  <div id="jira-sprint-completion">
+    <p>To get the <pre>Sprint ID</pre>, go to your Backlog view in your project, right click on your sprint name and get the value of <pre>data-sprint-id</pre>.</p>
   </div>
 </div>
 
