Update With Changes

--- a/try.html
+++ b/try.html
@@ -117,15 +117,15 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/magnumci/ci/96ffb83fa700f069024921b0702e76ff/new-meta.svg</code></td>
   </tr>
   <tr><th> CircleCI: </th>
-      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser.svg?maxAge=2592000' alt=''/></td>
+      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser.svg</code></td>
   </tr>
   <tr><th> CircleCI branch: </th>
-      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg?maxAge=2592000' alt=''/></td>
+      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
   </tr>
   <tr><th> CircleCI token: </th>
-      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg?maxAge=2592000' alt=''/></td>
+      <td><img src='/circleci/project/github/RedSparr0w/node-csgo-parser/master.svg' alt=''/></td>
       <td><code>https://img.shields.io/circleci/token/YOURTOKEN/project/github/RedSparr0w/node-csgo-parser/master.svg</code></td>
   </tr>
   <tr><th data-doc='visualStudioTeamServices'> Visual Studio Team services: </th>
