--- a/try.html
+++ b/try.html
@@ -470,6 +470,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/github/tag/strongloop/express.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/tag/strongloop/express.svg</code></td>
   </tr>
+  <tr><th data-doc='githubDoc'> GitHub development: </th>
+  <td><img src='/github/package/badges/shields.svg' alt=''/></td>
+  <td><code>https://img.shields.io/github/package/badges/shields.svg</code></td>
+  </tr>
   <tr><th data-doc='githubDoc'> GitHub release: </th>
   <td><img src='/github/release/qubyte/rubidium.svg' alt=''/></td>
   <td><code>https://img.shields.io/github/release/qubyte/rubidium.svg</code></td>
