--- a/try.html
+++ b/try.html
@@ -391,7 +391,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/website-up-down-green-red/http/shields.io.svg' alt=''/></td>
   <td><code>https://img.shields.io/website-up-down-green-red/http/shields.io.svg</code></td>
   </tr>
-  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons:: </th>
+  <tr><th data-keywords='amo firefox mozilla'> Mozilla Addons: </th>
   <td><img src='/amo/d/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   <tr><th data-keywords='cocoapods'> CocoaPods: </th>
