--- a/try.html
+++ b/try.html
@@ -403,7 +403,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/cocoapods/dw/AFNetworking.svg' alt='' /></td>
     <td><code>https://img.shields.io/cocoapods/dw/AFNetworking.svg</code></td>
   </tr>
-  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='/amo/d/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/d/dustman.svg</code></td>
   </tr>
@@ -558,7 +558,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/homebrew/v/cake.svg' alt=''/></td>
   <td><code>https://img.shields.io/homebrew/v/cake.svg</code></td>
   </tr>
-  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
   <td><img src='/amo/v/dustman.svg' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
@@ -873,11 +873,11 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/aur/votes/yaourt.svg' alt=''/></td>
     <td><code>https://img.shields.io/aur/votes/yaourt.svg</code></td>
   </tr>
-  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='/amo/users/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/users/dustman.svg</code></td>
   </tr>
-  <tr><th data-keywords='amo firefox'> Mozilla Addons: </th>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='/amo/rating/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/rating/dustman.svg</code></td>
   </tr>
