Includes fixes requested by @espadrine

--- a/try.html
+++ b/try.html
@@ -836,7 +836,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   </tr>
   <tr><th data-doc='jira-sprint-completion'> JIRA sprint completion: </th>
     <td><img src='/jira/sprint/https/jira.spring.io/94.svg' alt=''/></td>
-    <td><code>https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg</code></td>
+    <td><pre>https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg</pre></td>
   </tr>
   <tr><th> Maintenance: </th>
     <td><img src='/maintenance/yes/2016.svg' alt=''/></td>
