Changes last pre tag to code tag

--- a/try.html
+++ b/try.html
@@ -1154,7 +1154,7 @@ is where the current server got started.
     </p>
   </div>
   <div id="jira-sprint-completion">
-    <p>To get the <pre>Sprint ID</pre>, go to your Backlog view in your project, right click on your sprint name and get the value of <pre>data-sprint-id</pre>.</p>
+    <p>To get the <code>Sprint ID</code>, go to your Backlog view in your project, right click on your sprint name and get the value of <code>data-sprint-id</code>.</p>
   </div>
 </div>
 
