--- a/try.html
+++ b/try.html
@@ -866,6 +866,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/chrome-web-store/rating/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
+    <td><img src='/chrome-web-store/stars/nimelepbpejjlbmoobocpfnjhihnpked.svg' alt=''/></td>
+    <td><code>https://img.shields.io/chrome-web-store/stars/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
+  </tr>
+  <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg' alt=''/></td>
     <td><code>https://img.shields.io/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
@@ -880,6 +884,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='/amo/rating/dustman.svg' alt=''/></td>
     <td><code>https://img.shields.io/amo/rating/dustman.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
+    <td><img src='/amo/stars/dustman.svg' alt=''/></td>
+    <td><code>https://img.shields.io/amo/stars/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
