--- a/index.html
+++ b/index.html
@@ -867,6 +867,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><code>https://img.shields.io/chrome-web-store/rating/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
   <tr><th data-keywords='chrome'> Chrome Web Store: </th>
+    <td><img src='https://img.shields.io/chrome-web-store/stars/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/chrome-web-store/stars/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
+  </tr>
+  <tr><th data-keywords='chrome'> Chrome Web Store: </th>
     <td><img src='https://img.shields.io/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/chrome-web-store/rating-count/nimelepbpejjlbmoobocpfnjhihnpked.svg</code></td>
   </tr>
@@ -881,6 +885,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
     <td><img src='https://img.shields.io/amo/rating/dustman.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/amo/rating/dustman.svg</code></td>
+  </tr>
+  <tr><th data-keywords='amo firefox'> Mozilla Add-on: </th>
+    <td><img src='https://img.shields.io/amo/stars/dustman.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/amo/stars/dustman.svg</code></td>
   </tr>
 </tbody></table>
 
