--- a/try.html
+++ b/try.html
@@ -543,6 +543,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/cpan/v/Config-Augeas.svg' alt=''/></td>
   <td><code>https://img.shields.io/cpan/v/Config-Augeas.svg</code></td>
   </tr>
+  <tr><th data-keywords='R'> CRAN: </th>
+  <td><img src='/cran/v/devtools.svg' alt=''/></td>
+  <td><code>https://img.shields.io/cran/v/devtools.svg</code></td>
+  </tr>
   <tr><th data-keywords='tex'> CTAN: </th>
   <td><img src='/ctan/v/tex.svg' alt=''/></td>
   <td><code>https://img.shields.io/ctan/v/tex.svg</code></td>
