--- a/try.html
+++ b/try.html
@@ -415,7 +415,7 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
 </tbody></table>
 <h3 id="version"> Version </h3>
 <table class='badge'><tbody>
-  <tr><th data-keywords='cdn cdnjs'> CDNJS: </th>
+  <tr><th data-keywords='cdn cdnjs' data-link='https://cdnjs.com/libraries/jquery'> CDNJS: </th>
   <td><img src='/cdnjs/v/jquery.svg' alt=''/></td>
   <td><code>https://img.shields.io/cdnjs/v/jquery.svg</code></td>
   </tr>
