Added AppleStore version

--- a/index.html
+++ b/index.html
@@ -563,6 +563,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='https://img.shields.io/amo/v/dustman.svg?maxAge=2592000' alt=''/></td>
   <td><code>https://img.shields.io/amo/v/dustman.svg</code></td>
   </tr>
+  <tr><th> Apple Store: </th>
+    <td><img src='https://img.shields.io/applestore/v/803453959.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/applestore/v/BUNDLE_ID.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h3 id="social"> Social </h3>
