Add GitLab CI badge support
Address #541

--- a/try.html
+++ b/try.html
@@ -156,6 +156,22 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg' alt=''/></td>
     <td><code>https://img.shields.io/jenkins/c/https/jenkins.qa.ubuntu.com/address-book-service-utopic-i386-ci.svg</code></td>
   </tr>
+  <tr><th> GitLab CI: </th>
+    <td><img src='/gitlab/ci/s/gitlab-org/gitlab-ce.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitlab/ci/USER/REPO.svg</code></td>
+  </tr>
+  <tr><th> GitLab CI branch: </th>
+    <td><img src='/gitlab/ci/s/gitlab-org/gitlab-ce/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitlab/ci/USER/REPO/BRANCH.svg</code></td>
+  </tr>
+  <tr><th> GitLab CI coverage: </th>
+    <td><img src='/gitlab/ci/c/1.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitlab/ci/PROJECT_ID.svg</code></td>
+  </tr>
+  <tr><th> GitLab CI branch coverage: </th>
+    <td><img src='/gitlab/ci/c/1/master.svg' alt=''/></td>
+    <td><code>https://img.shields.io/gitlab/ci/PROJECT_ID/BRANCH.svg</code></td>
+  </tr>
   <tr><th> Coveralls: </th>
     <td><img src='/coveralls/jekyll/jekyll.svg' alt=''/></td>
     <td><code>https://img.shields.io/coveralls/jekyll/jekyll.svg</code></td>
