--- a/index.html
+++ b/index.html
@@ -1054,13 +1054,13 @@ Here are a few other parameters you can use:
     <td>Insert logo image (≥ 14px high)</td></tr>
   <tr><td><code>?logoWidth=40</code></td>
     <td>Set the horizontal space to give to the logo</td></tr>
-  <tr><td><code>?link=http://abc.xyz&amp;link=http://shields.io</code></td>
+  <tr><td><code>?link=http://left&amp;link=http://right</code></td>
     <td>Specify what clicking on the left/right of a badge should do (esp. for
       social badge style)</td></tr>
   <tr><td><code>?colorA=abcdef</code></td>
-    <td>Set background of the left part</td></tr>
+    <td>Set background of the left part (hex color only)</td></tr>
   <tr><td><code>?colorB=fedcba</code></td>
-    <td>Set background of the right part</td></tr>
+    <td>Set background of the right part (hex color only)</td></tr>
   <tr><td><code>?maxAge=3600</code></td>
     <td>Set the HTTP cache lifetime in secs</td></tr>
 </tbody></table>
