GitHub Standards integration + linkable templates

--- a/try.html
+++ b/try.html
@@ -968,6 +968,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='/librariesio/github/phoenixframework/phoenix.svg' alt=''/></td>
     <td><code>https://img.shields.io/librariesio/github/phoenixframework/phoenix.svg</code></td>
   </tr>
+  <tr><th> GitHub Standards: </th>
+    <td><img src='/github/standards/meta/4.svg' alt=''/></td>
+    <td><code>https://img.shields.io/github/standards/meta/4.svg</code></td>
+  </tr>
 </tbody></table>
 
 <h2 id="your-badge"> Your Badge </h2>
@@ -1054,8 +1058,7 @@ Here are a few other parameters you can use:
   <tr><td><code>?logoWidth=40</code></td>
     <td>Set the horizontal space to give to the logo</td></tr>
   <tr><td><code>?link=http://abc.xyz&amp;link=http://shields.io</code></td>
-    <td>Specify what clicking on the left/right of a badge should do (esp. for
-      social badge style)</td></tr>
+    <td>Specify what clicking on the left/right of a badge should do</td></tr>
   <tr><td><code>?colorA=abcdef</code></td>
     <td>Set background of the left part</td></tr>
   <tr><td><code>?colorB=fedcba</code></td>
