Adds maven-metadata.xml support.

--- a/try.html
+++ b/try.html
@@ -529,6 +529,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/bintray/v/asciidoctor/maven/asciidoctorj.svg' alt=''/></td>
   <td><code>https://img.shields.io/bintray/v/asciidoctor/maven/asciidoctorj.svg</code></td>
   </tr>
+  <tr><th> Maven: </th>
+    <td><img src='/maven/v/http://central.maven.org/maven2/com/google/code/gson/gson/maven-metadata.xml.svg' alt=''/></td>
+    <td><code>https://img.shields.io/maven/v/http://central.maven.org/maven2/com/google/code/gson/gson/maven-metadata.xml.svg</code></td>
+  </tr>
   <tr><th> Clojars: </th>
   <td><img src='/clojars/v/prismic.svg' alt=''/></td>
   <td><code>https://img.shields.io/clojars/v/prismic.svg</code></td>
