website: JIRA sprint

--- a/index.html
+++ b/index.html
@@ -847,6 +847,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
     <td><img src='https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/jira/issue/https/issues.apache.org/jira/KAFKA-2896.svg</code></td>
   </tr>
+  <tr><th data-doc='jira-sprint-completion'> JIRA sprint completion: </th>
+    <td><img src='https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg?maxAge=2592000' alt=''/></td>
+    <td><code>https://img.shields.io/jira/sprint/https/jira.spring.io/94.svg</code></td>
+  </tr>
   <tr><th> Maintenance: </th>
     <td><img src='https://img.shields.io/maintenance/yes/2016.svg?maxAge=2592000' alt=''/></td>
     <td><code>https://img.shields.io/maintenance/yes/2016.svg</code></td>
@@ -1181,6 +1185,9 @@ is where the current server got started.
     <a href="https://img.shields.io/github-auth">going to this page</a>
     to add Shields as a GitHub application on your GitHub account.
     </p>
+  </div>
+  <div id="jira-sprint-completion">
+    <p>To get the <code>Sprint ID</code>, go to your Backlog view in your project, right click on your sprint name and get the value of <code>data-sprint-id</code>.</p>
   </div>
 </div>
 
