Fix Shield.io (should be Shields.io)
Fixes #871.

--- a/try.html
+++ b/try.html
@@ -1184,7 +1184,7 @@ is where the current server got started.
   <div id="githubDoc">
     <p>If your GitHub badge errors, it might be because you hit GitHub's rate
     limits.<br>
-    You can increase Shield.io's rate limit by
+    You can increase Shields.io's rate limit by
     <a href="https://img.shields.io/github-auth">going to this page</a>
     to add Shields as a GitHub application on your GitHub account.
     </p>
