added typo3 to try.html

--- a/try.html
+++ b/try.html
@@ -323,6 +323,10 @@ Pixel-perfect &nbsp; Retina-ready &nbsp; Fast &nbsp; Consistent &nbsp; Hackable 
   <td><img src='/wordpress/plugin/dt/akismet.svg' alt=''/></td>
   <td><code>https://img.shields.io/wordpress/plugin/dt/akismet.svg</code></td>
   </tr>
+  <tr><th> Typo3: </th>
+    <td><img src='/typo3/extension/dt/sh_scoutnet_kalender.svg' alt=''/></td>
+    <td><code>https://img.shields.io/typo3/extension/dt/sh_scoutnet_kalender.svg</code></td>
+  </tr>
   <tr><th> SourceForge: </th>
   <td><img src='/sourceforge/dm/sevenzip.svg' alt=''/></td>
   <td><code>https://img.shields.io/sourceforge/dm/sevenzip.svg</code></td>
